--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid h-100">
-  <div class="row h-100">
-      <aside class="col-12 col-md-2 p-0 bg-dark">
-          <app-sidebar-nav></app-sidebar-nav>
+<div class="container-fluid">
+  <div class="row min-vh-100 flex-column flex-md-row">
+      <aside class="col-12 col-md-3 p-0 bg-dark flex-shrink-1">
+        <app-sidebar-nav></app-sidebar-nav>
       </aside>
-      <main class="col">
+      <main class="col bg-faded py-3 flex-grow-1">
         <router-outlet></router-outlet>
       </main>
   </div>
