--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -1,11 +1,33 @@
-
-    <nav class="navbar navbar-expand navbar-dark bg-dark flex-md-column flex-row align-items-start">
-        <div class="collapse navbar-collapse">
-            <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
-                <li class="nav-item">
-                    <a class="nav-link pl-0" href="#">Link</a>
-                </li>
-                ..
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand navbar-light bg-light flex-lg-column flex-row align-items-start py-2">
+    <div class="collapse navbar-collapse ">
+        <ul class="flex-md-column flex-row navbar-nav w-200 justify-content-between">
+            <li class="nav-item logo">
+                <img class="circle" src="https://github.com/atangeman.png?size=150">
+                <h4>Andy Tangeman</h4>
+                <p class="title">GIS Architect</p>
+                <p>andytangeman@gmail.com</p>
+            </li>
+            <hr />
+            <li class="nav-item">
+                <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span
+                        class="d-none d-md-inline">About</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pl-0" href="#"><i class="fa fa-cog fa-fw"></i> <span
+                        class="d-none d-md-inline">Projects</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pl-0" href="#"><i class="fa fa-heart codeply fa-fw"></i> <span
+                        class="d-none d-md-inline">Skills</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pl-0" href="#"><i class="fa fa-star codeply fa-fw"></i> <span
+                        class="d-none d-md-inline">Experience</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pl-0" href="#"><i class="fa fa-star fa-fw"></i> <span
+                        class="d-none d-md-inline">Resume</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
