--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -3,13 +3,14 @@
         <ul class="flex-md-column flex-row navbar-nav w-200 justify-content-between">
             <li class="nav-item logo">
                 <img class="circle" src="https://github.com/atangeman.png?size=150">
+                <br>
                 <h4>Andy Tangeman</h4>
                 <p class="title">GIS Architect</p>
                 <p>andytangeman@gmail.com</p>
             </li>
             <hr />
             <li class="nav-item">
-                <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span
+                <a class="nav-link pl-0" [routerLink]="['/about']"><i class="fa fa-book fa-fw"></i> <span
                         class="d-none d-md-inline">About</span></a>
             </li>
             <li class="nav-item">
