--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row min-vh-100 flex-column flex-md-row">
-      <aside class="col-12 col-md-3 p-0 bg-dark flex-shrink-1">
+      <aside class="col-12 col-md-3 p-0 bg-light flex-shrink-1">
         <app-sidebar-nav></app-sidebar-nav>
       </aside>
       <main class="col bg-faded py-3 flex-grow-1">
