worked on skills section

--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -18,7 +18,7 @@
                         class="d-none d-md-inline">Projects</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" href="#"><i class="fa fa-heart codeply fa-fw"></i> <span
+                <a class="nav-link pl-0" [routerLink]="['/skills']"><i class="fa fa-heart codeply fa-fw"></i> <span
                         class="d-none d-md-inline">Skills</span></a>
             </li>
             <li class="nav-item">
