worked on skills page

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 90%; padding: 10px;">
+<div class="card" style="width: 90%; padding: 15px;">
     <div class="card-content skills first">
         <h4 class="brown-text light">Languages</h4>
         <div class="row text-center">
@@ -33,6 +33,7 @@
   <div class="card-content skills">
     <h4 class="brown-text light">Technology</h4>
     <div class="row text-center">
+        <div class="col s4 m2"><img alt="" src="assets/arcgis.png" class="responsive-img">ArcGIS</div>
       <div class="col s4 m2"><img alt="" src="assets/linux.png" class="responsive-img">Linux</div>
       <div class="col s4 m2"><img alt="" src="assets/git.png" class="responsive-img">Git</div>
       <div class="col s4 m2"><img alt="" src="assets/npm.png" class="responsive-img">NPM</div>
