--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,11 +1,25 @@
 <div class="container-fluid">
-    <div class="row">
-        <!--
-      <div class="slide-row">
-        <app-slideshow class="slideshow"></app-slideshow>
+    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets\map-dcmetro.jpg" class="d-block w-100" >
+          </div>
+          <div class="carousel-item">
+            <img src="assets\map-dcmetro.jpg" class="d-block w-100" >
+          </div>
+          <div class="carousel-item">
+            <img src="assets\map-dcmetro.jpg" class="d-block w-100" >
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
       </div>
-      -->
-    </div>
     <hr>
     <div class="row">
       <div class="col-md-12">
