--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -14,7 +14,7 @@
                         class="d-none d-md-inline">About</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" href="#"><i class="fa fa-cog fa-fw"></i> <span
+                <a class="nav-link pl-0" [routerLink]="['/projects']"><i class="fa fa-cog fa-fw"></i> <span
                         class="d-none d-md-inline">Projects</span></a>
             </li>
             <li class="nav-item">
