worked on sidebar formatting

--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -5,13 +5,18 @@
                 <img class="circle" src="https://github.com/atangeman.png?size=150">
                 <br>
                 <h4>Andy Tangeman</h4>
-                <p class="title">GIS Architect</p>
-                <p>andytangeman@gmail.com</p>
+                <p class="title">GIS Architect, Consultant</p>
+                <ul style="display: inline-block;">
+                    <li><a href="https://github.com/atangeman"><img id="social_img" src="assets/github.png" alt="Github"></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/atangeman/"><img id="social_img" src="assets/linkedin.png" alt="Linked In"></a>
+                    </li>
+                </ul>
             </li>
             <hr />
             <li class="nav-item">
                 <a class="nav-link pl-0" [routerLink]="['/about']"><i class="fa fa-book fa-fw"></i> <span
-                        class="d-none d-md-inline">About</span></a>
+                        class="d-none d-md-inline">Home</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link pl-0" [routerLink]="['/projects']"><i class="fa fa-cog fa-fw"></i> <span
