--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,8 +10,9 @@
         style="width:100%; height:250px; object-fit: cover;object-position: right top; opacity:0.8;">
         -->
     <div class="card-body">
-        <p class="card-text">The portfolio that you are viewing was written in Angular Framework v10 and deployed to
-            Github pages using the Angular Cli.</p>
+        <p class="card-text">The portfolio that you are viewing was written in Angular Framework and generated with Angular CLI version 12.1.1.
+            The goal was to provide a simple a streamlined UI/UX for displaying my work and accomplishments.
+        </p>
     </div>
     <div class="card-body">
         <h6 class="card-text">Technology</h6>
@@ -22,7 +23,9 @@
         </ul>
     </div>
     <div class="card-body">
-        <a href="#" class="card-link">Github</a>
+        <h6 class="card-text">Links</h6>
+        <a href="https://github.com/atangeman/portfolio-v2" class="card-link">
+            <img alt="" src="assets/github.png" style="height: 50px; filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));"></a>
     </div>
     <div class="card-footer text-muted">
         July 2021
@@ -53,9 +56,6 @@
             <li class="list-group-item"><img alt="" src="assets/sqlserver.png" class="responsive-img"/> SQL Server</li>
         </ul>
     </div>
-    <div class="card-body">
-        <a href="#" class="card-link">Github</a>
-    </div>
     <div class="card-footer text-muted">
         Febrary - August 2021
     </div>
@@ -69,6 +69,12 @@
             Worked in collaboration with system architects, DBA, and development team to implement a highly available
             implementation of ArcGIS Enterprise.</p>
     </div>
+    <div class="card-body">
+        <h6 class="card-text">Technology</h6>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><img alt="" src="assets/arcgis.png" class="responsive-img"/> ArcGIS Enterprise</li>
+        </ul>
+    </div>
     <div class="card-footer text-muted">
         Aug 2019 – Nov 2019
     </div>
@@ -81,6 +87,13 @@
         <p class="card-text">Designed and built an ArcGIS Enterprise 10.7.1 cloud solution for the City of Chula Vista
             using Azure Government Cloud.</p>
     </div>
+    <div class="card-body">
+        <h6 class="card-text">Technology</h6>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><img alt="" src="assets/arcgis.png" class="responsive-img"/> ArcGIS Enterprise</li>
+            <li class="list-group-item"><img alt="" src="assets/azure.png" class="responsive-img"/> Microsoft Azure</li>
+        </ul>
+    </div>
     <div class="card-footer text-muted">
         Sep 2019 – Oct 2019
     </div>
@@ -92,8 +105,13 @@
         <h6 class="card-subtitle mb-2 text-muted">ArcGIS Enterprise - Cloud Build</h6>
         <p class="card-text">Co-developer on a four person project to develop a public application for FilmLA. Performed
             setup and implementation of ArcGIS Enterprise 10.7.1 stack on Linux VM's in a cloud environment.</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+    </div>
+    <div class="card-body">
+        <h6 class="card-text">Technology</h6>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><img alt="" src="assets/arcgis.png" class="responsive-img"/> ArcGIS Enterprise</li>
+            <li class="list-group-item"><img alt="" src="assets/linux.png" class="responsive-img"/> Linux</li>
+        </ul>
     </div>
     <div class="card-footer text-muted">
         Jul 2019 – Aug 2019
@@ -107,8 +125,6 @@
         <p class="card-text">Lead developer on an upgrade of ArcGIS Enterprise software to 10.6.1 for the City of San
             Diego. Coordinated technical requirements to multiple vendors on network, hardware, and infrastructure
             support in support of Department of IT.</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
     </div>
     <div class="card-footer text-muted">
         Sep 2018 – Jul 2019
