--- a/src/app/sidebar-nav/sidebar-nav.component.css
+++ b/src/app/sidebar-nav/sidebar-nav.component.css
@@ -1,6 +1,14 @@
 img {
     border-radius: 50%;
   }
+#social_img {
+    max-width: 25px;
+    max-height: 25px;
+}
+ul li {
+    display:inline-block;
+    padding: 10px;
+}
 .card {
     margin: auto;
     text-align: center;
