--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,3 +1,5 @@
+<h1>Skills</h1>
+<hr>
 <div class="card" style="width: 90%; padding: 15px;">
     <div class="card-content skills first">
         <h4 class="brown-text light">Languages</h4>
