css formatting and styling of sidebar

--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -4,12 +4,14 @@
             <li class="nav-item logo">
                 <img class="circle" src="https://github.com/atangeman.png?size=150">
                 <br>
-                <h4>Andy Tangeman</h4>
-                <p class="title">GIS Architect, Consultant</p>
+                <h5>Andy Tangeman</h5>
+                <p class="title">GIS Architect, IT Consultant</p>
                 <ul style="display: inline-block;">
                     <li><a href="https://github.com/atangeman"><img id="social_img" src="assets/github.png" alt="Github"></a>
                     </li>
                     <li><a href="https://www.linkedin.com/in/atangeman/"><img id="social_img" src="assets/linkedin.png" alt="Linked In"></a>
+                    </li>
+                    <li><a href="mailto:andrew@quarticsolutions.com"><img id="social_img" src="assets/email.png" alt="Linked In"></a>
                     </li>
                 </ul>
             </li>
