--- a/src/app/sidebar-nav/sidebar-nav.component.css
+++ b/src/app/sidebar-nav/sidebar-nav.component.css
@@ -1,6 +1,23 @@
-img {
+
+.circle {
     border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
+  h5{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+.title {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
 #social_img {
     max-width: 25px;
     max-height: 25px;
