worked on experience; css formatting

--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -29,7 +29,7 @@
                         class="d-none d-md-inline">Skills</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" href="#"><i class="fa fa-star codeply fa-fw"></i> <span
+                <a class="nav-link pl-0" [routerLink]="['/experience']"><i class="fa fa-star codeply fa-fw"></i> <span
                         class="d-none d-md-inline">Experience</span></a>
             </li>
             <li class="nav-item">
