--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,8 +7,7 @@
           <div class="col s4 m2"><img alt="" src="assets/python.png" class="responsive-img">Python</div>
           <div class="col s4 m2"><img alt="" src="assets/csharp.png" class="responsive-img">C#</div>
           <div class="col s4 m2"><img alt="" src="assets/javascript.png" class="responsive-img">JavaScript</div>
-          <div class="col s4 m2"><img alt="" src="assets/html.png" class="responsive-img">HTML</div>
-          <div class="col s4 m2"><img alt="" src="assets/css3.png" class="responsive-img">CSS</div>
+          <div class="col s4 m2"><img alt="" src="assets/typescript.png" class="responsive-img">Typescript</div>
         </div>
       </div>
   <div class="card-content skills">
