added Google Analytics

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,7 +20,10 @@
           </h2>
           <p class="blog-post-meta">July 14, 2021 by <a href="#">Andy Tangeman</a></p>
           <hr>
-          <p>This portfolio is designed to showcase the breadth and scope of my skill-set. It is built using Angular 6.x for populating and displaying my work in the Projects menu on the left sidebar. I will add more functionality 
+          <p>
+            My experience in GIS helps me to design and build reliable enterprise solutions. I am happy to adapt new technologies to solve problems and align existing architecture to meet business requirements.
+            
+            This portfolio is designed to showcase the breadth and scope of my skill-set. It is built using Angular 6.x for populating and displaying my work in the Projects menu on the left sidebar. I will add more functionality 
             as time allows. 
           </p>
         </div>
