--- a/src/app/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/sidebar-nav/sidebar-nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-light bg-light flex-lg-column flex-row align-items-start py-2">
     <div class="collapse navbar-collapse ">
         <ul class="flex-md-column flex-row navbar-nav w-200 justify-content-between">
-            <li class="nav-item logo">
+            <li class="nav-item logo d-none d-sm-block">
                 <img class="circle" src="https://github.com/atangeman.png?size=150">
                 <br>
                 <h5>Andy Tangeman</h5>
@@ -18,23 +18,23 @@
             <hr />
             <li class="nav-item">
                 <a class="nav-link pl-0" [routerLink]="['/about']"><i class="fa fa-book fa-fw"></i> <span
-                        class="d-none d-md-inline">Home</span></a>
+                        class="d-none d-md-inline"> Home</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" [routerLink]="['/projects']"><i class="fa fa-cog fa-fw"></i> <span
-                        class="d-none d-md-inline">Projects</span></a>
+                <a class="nav-link pl-0" [routerLink]="['/projects']"><i class="fa fa-project-diagram fa-fw"></i> <span
+                        class="d-none d-md-inline"> Projects</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" [routerLink]="['/skills']"><i class="fa fa-heart codeply fa-fw"></i> <span
-                        class="d-none d-md-inline">Skills</span></a>
+                <a class="nav-link pl-0" [routerLink]="['/skills']"><i class="fa fa-tasks codeply fa-fw"></i> <span
+                        class="d-none d-md-inline"> Skills</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link pl-0" [routerLink]="['/experience']"><i class="fa fa-star codeply fa-fw"></i> <span
-                        class="d-none d-md-inline">Experience</span></a>
+                        class="d-none d-md-inline"> Experience</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pl-0" href="#"><i class="fa fa-star fa-fw"></i> <span
-                        class="d-none d-md-inline">Resume</span></a>
+                <a class="nav-link pl-0" href="https://drive.google.com/file/d/13FFTAFJ55mwSD_qdk7d5ggKwa96BXrty/view?usp=sharing"><i class="fa fa-file-alt fa-fw"></i> <span
+                        class="d-none d-md-inline"> Resume</span></a>
             </li>
         </ul>
     </div>
