--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
 <div class="container-fluid">
   <div class="row min-vh-100 flex-column flex-md-row">
-      <aside class="col-12 col-md-2 p-0 bg-light flex-shrink-1">
-        <app-sidebar-nav></app-sidebar-nav>
-      </aside>
-      <main class="col bg-faded py-3 flex-grow-1">
-        <router-outlet></router-outlet>
-      </main>
+    <aside class="col-12 col-md-2 p-0 bg-light flex-shrink-1">
+      <app-sidebar-nav></app-sidebar-nav>
+    </aside>
+    <main class="col bg-faded py-3 flex-grow-1">
+      <router-outlet></router-outlet>
+    </main>
+    <!-- footer -->
   </div>
 </div>
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        Made with <i class="fas fa-heart"></i>, built using <a href="https://angular.io/"><img alt="" src="assets/angular.png" style="width: 20px; height: 20px;"></a> 
+        <br>
+        by <a href="https://www.linkedin.com/in/atangeman/">Andy Tangeman</a>
+      </p>
+    </div>
+  </div>
+</footer>
