add additional project images

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,7 +3,7 @@
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">Personal Portfolio Vers 2.0</h5>
-        <h6 class="card-subtitle text-muted">A personal web portfolio written in Angular for displaying work.</h6>
+        <h6 class="card-subtitle text-muted">Custom Application - Personal Portfolio</h6>
     </div>
     <!--
     <img alt="" src="assets/portfoliov2.png"
@@ -36,8 +36,7 @@
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">ArcGIS Data Refresh Gen 4.0</h5>
-        <h6 class="card-subtitle text-muted">Client project for managing data manifest for ArcGIS data refresh (ADR)
-            operations for County of San Diego.</h6>
+        <h6 class="card-subtitle text-muted">Custom Application - Geodata Content Management</h6>
     </div>
     <img alt="" src="assets/adrg4-01.png"
         style="width:100%; height:350px; object-fit: cover;object-position: right top; opacity:0.8;">
@@ -128,5 +127,61 @@
     </div>
     <div class="card-footer text-muted">
         Sep 2018 – Jul 2019
+    </div>
+</div>
+
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">
+            Geosweep / IAMSD SAP Integration
+        </h5>
+        <h6 class="card-subtitle text-muted">Custom Application - SAP EAM Interface</h6>
+    </div>
+    <img alt="" src="assets/geosweep.jpg"
+        style="width:100%; height:350px; object-fit: cover;object-position: right top; opacity:0.8;">
+    <div class="card-body">
+        <p class="card-text">Backend developer on a two person subproject as part of the The City of San Diego's 
+            Infrastructure Asset Management Project (IAM San Diego). Geosweep pulls and pushes data between: a SAP HANA EAM system, 
+            a CalAmp Automated Vehicle Location (AVL) system, and an Esri ArcGIS Enterprise System.</p>
+    </div>
+    <div class="card-body">
+        <h6 class="card-text">Technology</h6>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><img alt="" src="assets/csharp.png" class="responsive-img"/> C#</li>
+            <li class="list-group-item"><img alt="" src="assets/dotnet.png" class="responsive-img"/> .NET 5</li>
+            <li class="list-group-item"><img alt="" src="assets/arcgis.png" class="responsive-img"/> ArcGIS</li>
+            <li class="list-group-item"><img alt="" src="assets/sqlserver.png" class="responsive-img"/> SQL Server</li>
+        </ul>
+    </div>
+    <div class="card-footer text-muted">
+        Aug 2017 - Mar 2018
+    </div>
+</div>
+
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">
+            FireMap Desktop
+        </h5>
+        <h6 class="card-subtitle text-muted">Custom Application - Emergency Management</h6>
+    </div>
+    <img alt="" src="assets/firemap.png"
+        style="width:100%; height:350px; object-fit: cover;object-position: right top; opacity:0.8;">
+    <div class="card-body">
+        <p class="card-text">FireMap is a desktop and WebAPI application written in C#/.NET 4.5.1. 
+            The purpose of the application is to relay live unit dispatch information to operators at San Diego Fire Department - Metro Zone Command and Data Center. 
+            The application includes an offline backup component that triggers in the event of a failure to retrieve live dispatch data from their dispatch system.</p>
+    </div>
+    <div class="card-body">
+        <h6 class="card-text">Technology</h6>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><img alt="" src="assets/csharp.png" class="responsive-img"/> C#</li>
+            <li class="list-group-item"><img alt="" src="assets/dotnet.png" class="responsive-img"/> .NET</li>
+            <li class="list-group-item"><img alt="" src="assets/arcgis.png" class="responsive-img"/> ArcGIS</li>
+            <li class="list-group-item"><img alt="" src="assets/sqlserver.png" class="responsive-img"/> SQL Server</li>
+        </ul>
+    </div>
+    <div class="card-footer text-muted">
+        Jan 2016 - Aug 2016
     </div>
 </div>
